--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>site.wangxing.plugin.format.field.pyramid</id>
     <name>FormatFieldPyramid</name>
-    <version>1.2</version>
+    <version>1.3</version>
     <vendor email="daikaiwy@163.com" url="https://github.com/dkwx/intellj-format-fields-plugin">wangxing's restaurant</vendor>
     <!--    <vendor email="daikaiwy@163.com" url="https://www.wangxing.site">wangxing's restaurant</vendor>-->
 
@@ -37,8 +37,10 @@
     <change-notes>
         <![CDATA[
         <ul>
-        <li>v1.1 modify short key</li>
-        <li>v1.0 author daikai date 2019-11-02</li>
+        <li>v1.3 Fix bug when overwriting superclass</li>
+        <li>v1.2 Modify description information</li>
+        <li>v1.1 Modify short key</li>
+        <li>v1.0 Author daikai date 2019-11-02</li>
         </ul>
         more details
         @see <a>https://github.com/dkwx/intellj-format-fields-plugin</a>
