增加简介和演示文件

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -9,33 +9,34 @@
         <![CDATA[
         <dl>
           <dt>这个插件可以将Java文件的全局字段排序，按代码的长度由短到长排序。</dt>
-          <dd> 不选中内容，默认格式化整个文件，这时idea会自动根据属性的修饰符分组，很遗憾，目前无法改变。
-        选中内容，只会格式化选中内容，而且完全按长度排序，不分组，建议选中内容格式化。</dd>
+          <dd> 不选中内容，默认格式化整个文件，这时idea会自动根据属性的修饰符分组。选中内容，只会格式化选中内容，而且完全按长度排序，不分组，建议选中内容格式化。</dd>
           <dt> This plug-in can sort the global fields of Java files, from short to long, according to the length of the code</dt>
           <dd> Unselected, the entire file is formatted by default, and idea is automatically grouped by the modifier of the property, which unfortunately cannot be changed at this time. 
         Selected content, will only format selected content, and completely sorted by length, no grouping, it is recommended that selected content format. </dd>
         </dl>
-            <p><img src="https://raw.githubusercontent.com/dkwx/intellj-format-fields-plugin/master/image/WechatIMG34.png"
-                 border="0" width="612" height="485" alt="with-HTML.png"/></p>
-       <p>
-       格式化例子见下,For example:
-       </p>
-       <ul>
-       <li>int i;</li>
-       <li> @Resource</li>
-       <li>Service service;</li>
-       <li> boolean bool;</li>
-       </ul>
-       <p>
-      After handle:
-       </p>
-       <ul>
-       <li>int i;</li>
-       <li> boolean bool;</li>
-       <li>@Resource</li>
-       <li>Service service;</li>
-       </ul>
+        <p><img src="https://raw.githubusercontent.com/dkwx/intellj-format-fields-plugin/master/image/demo1.png"
+            border="0" width="612" height="485" alt="with-HTML.png"/></p>
 
+        <p>格式化例子见下,For example:</p>
+
+        <ul>
+        <li>int i;</li>
+        <li> @Resource</li>
+        <li>Service service;</li>
+        <li> boolean bool;</li>
+        </ul>
+
+        <p>After handle:</p>
+
+        <ul>
+        <li>int i;</li>
+        <li> boolean bool;</li>
+        <li>@Resource</li>
+        <li>Service service;</li>
+        </ul>
+
+        <p><img src="https://raw.githubusercontent.com/dkwx/intellj-format-fields-plugin/master/image/demo2.gif"
+                     border="0" width="831" height="489" alt="with-HTML.png"/></p>
         ]]>
 
 
@@ -50,7 +51,7 @@
         <li>v1.0 Author daikai date 2019-11-02</li>
         </ul>
         more details
-        @see <a>https://github.com/dkwx/intellj-format-fields-plugin</a>
+        <a>https://github.com/dkwx/intellj-format-fields-plugin</a>
          ]]>
     </change-notes>
 
